Add javascript, initially just to update the temperature once.

--- a/www/index.html
+++ b/www/index.html
@@ -90,5 +90,6 @@
         <a href="https://en.wikipedia.org/wiki/Received_signal_strength_indication">RSSI</a> = <span id="rssi"></span>
       </span>
     </footer>
+    <script type="text/javascript" src="sample_app.js"></script>
   </body>
 </html>
