Add JS updateLed().

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
         <section class="row">
 	  <!-- LED state display on the left -->
 	  <section class="column">
-	    <p class="valueDisplay ledDisplay ledOff">
+	    <p class="valueDisplay ledDisplay ledOff" id="ledBox">
 	      <span id="ledState">OFF</span>
 	    </p>
 	    <h5 class="caption">Onboard LED</h5>
