JS: implement LED control buttons.

--- a/www/index.html
+++ b/www/index.html
@@ -52,13 +52,13 @@
 
 	  <!-- LED control buttons on the right -->
 	  <section class="column buttons">
-	    <button class="btnPlain" type="button" id="ledOn">
+	    <button class="btnPlain" type="button" id="ledBtnOn">
 	      Turn LED On
 	    </button>
-	    <button class="btnPlain" type="button" id="ledOff">
+	    <button class="btnPlain" type="button" id="ledBtnOff">
 	      Turn LED Off
 	    </button>
-	    <button class="btnPlain" type="button" id="ledToggle">
+	    <button class="btnPlain" type="button" id="ledBtnToggle">
 	      Toggle LED
 	    </button>
 	  </section>
