Frontend: display signal strength as a percentage.

--- a/www/index.html
+++ b/www/index.html
@@ -86,8 +86,8 @@
       </span>
       <br />
       <span id="rssi_text" style="display:none">
-        Signal strength:
-        <a href="https://en.wikipedia.org/wiki/Received_signal_strength_indication">RSSI</a> = <span id="rssi"></span>
+        Signal strength <span id="ss_pct"></span>%&nbsp;
+        (<span id="rssi"></span> dBm)
       </span>
     </footer>
     <script type="text/javascript" src="sample_app.js"></script>
