--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PicoW HTTP server sample app</title>
     <link rel="stylesheet" href="picow.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
   </head>
 
   <body>
