CSS: on a small device, show only one column at full width.

--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
       </section>
       
       <!-- Right column with the Pi-Cow -->
-      <section class="column">
+      <section class="column" id="cow_column">
 	<pre class="cow">
  __________
 < http://π >
