HTML/css: no line breaks in the temperature display.

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 	  <!-- Temperature section value display on the left -->
 	  <section class="column">
 	    <p class="valueDisplay">
-	      <span id="tempValue">0</span> &deg;<span id="tempScale">K</span>
+	      <span id="tempValue">0</span>&nbsp;&deg;<span id="tempScale">K</span>
 	    </p>
 	    <h5 class="caption">Onboard temperature sensor</h5>
 	  </section>
