JS: implement toast.

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,10 @@
   <body>
     <h1>PicoW HTTP server sample application</h1>
 
+    <section class="row" id="toast" style="display:none">Error:
+      <span id="errMsg"></span>
+    </section>
+
     <main class="row">
 
       <!-- Left column with temperature display and LED controls -->
