Refactor the custom handlers.
The rssi value is now sent on its own endpoint /rssi, with its own
handlers.

Add a handler for the /netinfo endpoint, which sends the hostname,
IP address, MAC address and SSID. That information is passed to
the handler as private data, in a struct that is initialized before
the server starts. The front end only calls /netinfo once.

--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,10 @@
     <!-- The footer shows the SSID and RSSI, if available. If not,
          hide the text. -->
     <footer>
-      <span id="ssid_text" style="display:none">
+      <span id="info_text" style="display:none">
+        Server at <span id="host"></span>&nbsp;
+        (<span id="ip"></span>, MAC <span id="mac"></span>)
+        <br />
         Connected to <span id="ssid"></span>
       </span>
       <br />
